fix local auth method
